--- a/Home.html
+++ b/Home.html
@@ -76,8 +76,7 @@
               </form>
             </div>
           </div>
-        </div> <!--Original copyright section deleted-->
-          <!-- Right -->
+        </div> 
         </div>
       </section>
     </body>
